# nfs-cogniverse

./: CMakeLists.txt  glad.c  main.cpp  readme.md
classes/: renderable.h  shader.cpp  shader.h  window.cpp  window.h
renderables/: rectangle.h  triangle.h
shaders/: fshader.fs
